--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Tuan Vu's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@
 						</header>
 						<p>I am an experienced software engineer specializing in robotics, with a focus on software engineering
 						within robotic systems. My core competency lies in designing, implementing, and testing embedded applications
-						for mobile robots. Proficient in C, modern C++, and Python, I bring over a decade of professional software
+						for mobile robots. Proficient in C, modern C++, Python and ROS, I bring over a decade of professional software
 						development experience in embedded Linux environments.
 						<div class="row">
 							<a href="https://drive.google.com/file/d/18Cp3FrcJHjYJHpYwvFThnArWcr6BdZMi/view?usp=sharing" class="button">My Resume</a>
@@ -42,24 +42,26 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Academic Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/scream_stock.png" class="image fit thumb"><img src="images/thumbs/scream_stock.png" alt="" /></a>
 								<h3>Style-transfer</h3>
-								<p>Implement deep learning model to merge the content of one photo with the artistic style of another.</p>
+								<p>Implement deep learning model to apply the artistic style of one photo to the content of another.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<iframe width="480" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+								<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
+								<h3>Enhanced Augmented Reality (EAR)</h3>
+								<p>Display advert over HD video with perspective transformation, in real time.</p>
+								<a href="https://drive.google.com/file/d/16ueTzaP8UDpcw29nyxeyVD1Xb6t_zElv/view?usp=sharing">Link to paper</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Computational Photography</h3>
+								<p>A portfolio of projects completed as part of the class.</p>
+								<a href="https://drive.google.com/file/d/165oGZ2HTj_PvNYxaU3qYEiFO0xGJtnmO/view?usp=sharing">Portfolio</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -77,7 +79,7 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 					<section id="About">
