Add Deep Learning final project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						for mobile robots. Proficient in C, modern C++, Python and ROS, I bring over a decade of professional software
 						development experience in embedded Linux environments.
 						<div class="row">
-							<a href="https://drive.google.com/file/d/18Cp3FrcJHjYJHpYwvFThnArWcr6BdZMi/view?usp=sharing" class="button">My Resume</a>
+							<a href="https://drive.google.com/file/d/1-oZ6vZKxMVyUzS2Eg4KLuhSkLcSbJi0_/view?usp=sharing" class="button">My Resume</a>
 							<a href="https://engineeringnotepad.wordpress.com/" class="button">My Blog</a>
 							<a href="#About" class="button">Learn More About Me</a>
 						</div>
@@ -44,10 +44,17 @@
 					<section id="two">
 						<h2>Academic Projects</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/scream_stock.png" class="image fit thumb"><img src="images/thumbs/scream_stock.png" alt="" /></a>
 								<h3>Style-transfer</h3>
 								<p>Implement deep learning model to apply the artistic style of one photo to the content of another.</p>
+							</article>
+							 -->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/ST-ViT.png" class="image fit thumb"><img src="images/thumbs/ST-ViT.png" alt="" /></a>
+								<h3>Sign Language Recognition (SLR)</h3>
+								<p>Research SLR and implement a Vision Transformer model capable of state-of-the-art accuracy on the AUTSL dataset.</p>
+								<a href="https://drive.google.com/file/d/1G83c_GHWDUOI6ddSGqi6cQlNqI6LkFUF/view?usp=sharing">Link to paper</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<iframe width="480" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
