Add RL project and change layout

--- a/index.html
+++ b/index.html
@@ -44,49 +44,40 @@
 					<section id="two">
 						<h2>Academic Projects</h2>
 						<div class="row">
+							<div class="column">
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="images/fulls/ST-ViT.png" class="image fit thumb"><img src="images/thumbs/ST-ViT.png" alt="" width="480" height="320" /></a>
+									<h3>Sign Language Recognition (SLR)</h3>
+									<p>Research SLR and implement a Vision Transformer model capable of state-of-the-art accuracy on the AUTSL dataset.</p>
+									<a href="https://drive.google.com/file/d/1G83c_GHWDUOI6ddSGqi6cQlNqI6LkFUF/view?usp=sharing">Link to paper</a>
+								</article>
+								<article class="col-6 col-12-xsmall work-item">
+									<iframe width="480" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
+									<h3>Enhanced Augmented Reality (EAR)</h3>
+									<p>Display advert over HD video with perspective transformation, in real time.</p>
+									<a href="https://drive.google.com/file/d/16ueTzaP8UDpcw29nyxeyVD1Xb6t_zElv/view?usp=sharing">Link to paper</a>
+								</article>
+								<article class="col-6 col-12-xsmall work-item">
+									<iframe width="480" height="320" src="https://www.youtube.com/embed/mF6Ni7fSv8I?si=l-8aXy3wnfA--bHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
+									<h3>LunarLanderV2 with SARSA agent</h3>
+									<p>Train a reinforcement learning agent using the SARSA algorithm.</p>
+									<a href="https://drive.google.com/file/d/1DfvDYNJcfcFdDyNveMx53n1khfFl1bam/view?usp=sharing">Link to paper</a>
+								</article>
+							</div>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/scream_stock.png" class="image fit thumb"><img src="images/thumbs/scream_stock.png" alt="" /></a>
 								<h3>Style-transfer</h3>
 								<p>Implement deep learning model to apply the artistic style of one photo to the content of another.</p>
 							</article>
-							 -->
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/ST-ViT.png" class="image fit thumb"><img src="images/thumbs/ST-ViT.png" alt="" /></a>
-								<h3>Sign Language Recognition (SLR)</h3>
-								<p>Research SLR and implement a Vision Transformer model capable of state-of-the-art accuracy on the AUTSL dataset.</p>
-								<a href="https://drive.google.com/file/d/1G83c_GHWDUOI6ddSGqi6cQlNqI6LkFUF/view?usp=sharing">Link to paper</a>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<iframe width="480" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-								<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
-								<h3>Enhanced Augmented Reality (EAR)</h3>
-								<p>Display advert over HD video with perspective transformation, in real time.</p>
-								<a href="https://drive.google.com/file/d/16ueTzaP8UDpcw29nyxeyVD1Xb6t_zElv/view?usp=sharing">Link to paper</a>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/scream_stock.png" class="image fit thumb"><img src="images/thumbs/scream_stock.png" alt="" /></a>
 								<h3>Computational Photography</h3>
 								<p>A portfolio of projects completed as part of the class.</p>
 								<a href="https://drive.google.com/file/d/165oGZ2HTj_PvNYxaU3qYEiFO0xGJtnmO/view?usp=sharing">Portfolio</a>
-							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> -->
 					</section>
 
 					<section id="About">
