Make video reactive

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 									<a href="https://drive.google.com/file/d/1G83c_GHWDUOI6ddSGqi6cQlNqI6LkFUF/view?usp=sharing">Link to paper</a>
 								</article>
 								<article class="col-6 col-12-xsmall work-item">
-									<iframe width="480" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									<iframe width="100%" height="320" src="https://www.youtube.com/embed/98cXi7M6qSg?si=qP9lVwnd2mkUIbBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 									<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
 									<h3>Enhanced Augmented Reality (EAR)</h3>
 									<p>Display advert over HD video with perspective transformation, in real time.</p>
 									<a href="https://drive.google.com/file/d/16ueTzaP8UDpcw29nyxeyVD1Xb6t_zElv/view?usp=sharing">Link to paper</a>
 								</article>
 								<article class="col-6 col-12-xsmall work-item">
-									<iframe width="480" height="320" src="https://www.youtube.com/embed/mF6Ni7fSv8I?si=l-8aXy3wnfA--bHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									<iframe width="100%" height="320" src="https://www.youtube.com/embed/mF6Ni7fSv8I?si=l-8aXy3wnfA--bHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 									<!-- <a href="https://youtu.be/98cXi7M6qSg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a> -->
 									<h3>LunarLanderV2 with SARSA agent</h3>
 									<p>Train a reinforcement learning agent using the SARSA algorithm.</p>
